# idk-twitch-desktop-app

./: docker-compose.yml  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/workflows/: main.yml
src/: App.svelte  basics-reset.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: data.rs  main.rs  messages.rs  token_storage.rs
src-tauri/src/adapters/: mod.rs  redis.rs  twitch.rs
src-tauri/src/emotes/: better_tv.rs  mod.rs  seven_tv.rs  twitch.rs
src-tauri/src/messages/: handle_message.rs  mod.rs
src/components/: Input.svelte
src/widgets/: Chat.svelte  Poll.svelte  Queue.svelte  Redeems.svelte
