[package]
name = "idk-twitch-desktop-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = "0.4.33"
dotenv = "0.15.0"
redis = {version="0.24.0", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = {version="0.11.23", features= ["native-tls-vendored"] }
twitch-irc = {version="5.0.1", features = ["transport-tcp", "transport-tcp-native-tls", "refreshing-token-native-tls"] }
twitch_api = {version="0.7.0-rc.7", features = ["twitch_oauth2", "reqwest", "helix"] }
tokio = "1.37.0"
futures = "0.3.30"
async-trait = "0.1.80"
